--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,5 @@
 
 <!DOCTYPE html>
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
 
 <html lang="en">
 
@@ -180,7 +179,7 @@
         </div>
 
         <div class="col-sm-6 offset-sm-2 offset-md-0 col-lg-5 d-none d-lg-block">
-          <div class="search-bar border rounded-2 px-3 border-dark-subtle">
+          <div class="search-bar border rounded-2 px-3 border-dark-subtle ">
             <form id="search-form" class="text-center d-flex align-items-center" action="" method="">
               <input type="text" class="form-control border-0 bg-transparent"
                 placeholder="Search for more than 10,000 products" />
@@ -193,18 +192,15 @@
         </div>
 
         <div
-          class="col-sm-8 col-lg-4 d-flex justify-content-end gap-5 align-items-center mt-4 mt-sm-0 justify-content-center justify-content-sm-end">
-          <div class="support-box text-end d-none d-xl-block">
+          class="col-sm-8 col-lg-4 d-flex justify-content-end gap-2 align-items-center mt-4 mt-sm-0 justify-content-center justify-content-sm-end">
+          <div class="support-box text-end d-none d-lg-block">
             <span class="fs-6 secondary-font text-muted">Phone</span>
-            <h5 class="mb-0">+980-34984089</h5>
+            <h5 class="mb-0">0966907482</h5>
           </div>
-          <div class="support-box text-end d-none d-xl-block">
+          <div class="support-box text-end d-none d-lg-block">
             <span class="fs-6 secondary-font text-muted">Email</span>
-            <h5 class="mb-0">waggy@gmail.com</h5>
+            <h5 class="mb-0">canhndhe161293@fpt.edu.vn</h5>
           </div>
-
-
-
         </div>
       </div>
     </div>
@@ -1689,12 +1685,7 @@
       <hr class="m-0">
       <div class="row mt-3">
         <div class="col-md-6 copyright">
-          <p class="secondary-font">Â© 2023 Waggy. All rights reserved.</p>
-        </div>
-        <div class="col-md-6 text-md-end">
-          <p class="secondary-font">Free HTML Template by <a href="https://templatesjungle.com/" target="_blank"
-              class="text-decoration-underline fw-bold text-black-50"> TemplatesJungle</a> Distributed by <a href="https://themewagon.com/" target="_blank"
-              class="text-decoration-underline fw-bold text-black-50"> ThemeWagon</a></p>
+          <p class="secondary-font">Â© 2023 PRJ302 PetShop. All rights reserved.</p>
         </div>
       </div>
     </div>
