--- a/web/index.html
+++ b/web/index.html
@@ -115,7 +115,7 @@
         <ul class="list-group mb-3">
           <li class="list-group-item d-flex justify-content-between lh-sm">
             <div>
-              <h6 class="my-0">Grey Hoodie</h6>
+              <h6 class="my-0">Gay Hoodie</h6>
               <small class="text-body-secondary">Brief description</small>
             </div>
             <span class="text-body-secondary">$12</span>
@@ -353,7 +353,7 @@
               </div>
               <div class="content-wrapper col-md-7 p-5 mb-5">
                 <div class="secondary-font text-primary text-uppercase mb-4">Save 10 - 20 % off</div>
-                <h2 class="banner-title display-1 fw-normal">Best destination for <span class="text-primary">your
+                <h2 class="banner-title display-1 fw-normal">The Best destination for <span class="text-primary">your
                     pets</span>
                 </h2>
                 <a href="#" class="btn btn-outline-dark btn-lg text-uppercase fs-6 rounded-1">
